source/Antlr/.antlr/highcParser.java
// Generated from c:/Users/rafaed/Desktop/Programming/highc/ReC/Antlr/highc.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class highcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, Whitespace=14, SLComment=15, MLComment=16, 
		Var=17, Let=18, If=19, Else=20, While=21, Fn=22, Continue=23, Break=24, 
		Defer=25, Type=26, Struct=27, Template=28, New=29, Return=30, For=31, 
		Mod=32, Use=33, Auto=34, And=35, Not=36, Or=37, True=38, False=39, Uninit=40, 
		Identifier=41, Integer=42, Float=43, String=44, Plus=45, Minus=46, Star=47, 
		Slash=48, Ampersand=49, Equal=50, CompEqual=51, OpenParen=52, CloseParen=53, 
		OpenBrace=54, CloseBrace=55, OpenIndex=56, CloseIndex=57;
	public static final int
		RULE_program = 0, RULE_top_level_statement = 1, RULE_mod_statement = 2, 
		RULE_use_statement = 3, RULE_template_header = 4, RULE_struct_define_field = 5, 
		RULE_struct_define = 6, RULE_fn_define_argument = 7, RULE_fn_define = 8, 
		RULE_alias_define = 9, RULE_block = 10, RULE_statement = 11, RULE_return_statement = 12, 
		RULE_defer_statement = 13, RULE_if_statement = 14, RULE_if_tail_statement = 15, 
		RULE_while_statement = 16, RULE_assign_statement = 17, RULE_let_expression = 18, 
		RULE_let_statement = 19, RULE_typename_fn_args = 20, RULE_typename = 21, 
		RULE_expression = 22, RULE_op_expression = 23, RULE_explicit_template_instantiation = 24, 
		RULE_call_expression = 25, RULE_struct_expression = 26, RULE_struct_expression_set = 27, 
		RULE_dot_expression = 28, RULE_term_expression = 29, RULE_literal = 30, 
		RULE_boolean_literal = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "top_level_statement", "mod_statement", "use_statement", "template_header", 
			"struct_define_field", "struct_define", "fn_define_argument", "fn_define", 
			"alias_define", "block", "statement", "return_statement", "defer_statement", 
			"if_statement", "if_tail_statement", "while_statement", "assign_statement", 
			"let_expression", "let_statement", "typename_fn_args", "typename", "expression", 
			"op_expression", "explicit_template_instantiation", "call_expression", 
			"struct_expression", "struct_expression_set", "dot_expression", "term_expression", 
			"literal", "boolean_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "'''", "';'", "'!='", "'>'", "'<'", "'<='", "'>='", 
			"'|'", "'>>'", "'<<'", "'~'", null, null, null, "'var'", "'let'", "'if'", 
			"'else'", "'while'", "'fn'", "'continue'", "'break'", "'defer'", "'type'", 
			"'struct'", "'template'", "'new'", "'return'", "'for'", "'mod'", "'use'", 
			"'auto'", "'and'", "'not'", "'or'", "'true'", "'false'", "'uninit'", 
			null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'&'", "'='", "'=='", 
			"'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "Whitespace", "SLComment", "MLComment", "Var", "Let", "If", 
			"Else", "While", "Fn", "Continue", "Break", "Defer", "Type", "Struct", 
			"Template", "New", "Return", "For", "Mod", "Use", "Auto", "And", "Not", 
			"Or", "True", "False", "Uninit", "Identifier", "Integer", "Float", "String", 
			"Plus", "Minus", "Star", "Slash", "Ampersand", "Equal", "CompEqual", 
			"OpenParen", "CloseParen", "OpenBrace", "CloseBrace", "OpenIndex", "CloseIndex"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "highc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public highcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Top_level_statementContext> top_level_statement() {
			return getRuleContexts(Top_level_statementContext.class);
		}
		public Top_level_statementContext top_level_statement(int i) {
			return getRuleContext(Top_level_statementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13359251456L) != 0)) {
				{
				{
				setState(64);
				top_level_statement();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Top_level_statementContext extends ParserRuleContext {
		public Fn_defineContext fn_define() {
			return getRuleContext(Fn_defineContext.class,0);
		}
		public Struct_defineContext struct_define() {
			return getRuleContext(Struct_defineContext.class,0);
		}
		public Alias_defineContext alias_define() {
			return getRuleContext(Alias_defineContext.class,0);
		}
		public Let_statementContext let_statement() {
			return getRuleContext(Let_statementContext.class,0);
		}
		public Mod_statementContext mod_statement() {
			return getRuleContext(Mod_statementContext.class,0);
		}
		public Use_statementContext use_statement() {
			return getRuleContext(Use_statementContext.class,0);
		}
		public Top_level_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level_statement; }
	}

	public final Top_level_statementContext top_level_statement() throws RecognitionException {
		Top_level_statementContext _localctx = new Top_level_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_top_level_statement);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				fn_define();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				struct_define();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				alias_define();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				let_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				mod_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				use_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mod_statementContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> parts = new ArrayList<Token>();
		public TerminalNode Mod() { return getToken(highcParser.Mod, 0); }
		public List<TerminalNode> Identifier() { return getTokens(highcParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(highcParser.Identifier, i);
		}
		public Mod_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod_statement; }
	}

	public final Mod_statementContext mod_statement() throws RecognitionException {
		Mod_statementContext _localctx = new Mod_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mod_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(Mod);
			{
			setState(79);
			((Mod_statementContext)_localctx).Identifier = match(Identifier);
			((Mod_statementContext)_localctx).parts.add(((Mod_statementContext)_localctx).Identifier);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(80);
				match(T__0);
				setState(81);
				((Mod_statementContext)_localctx).Identifier = match(Identifier);
				((Mod_statementContext)_localctx).parts.add(((Mod_statementContext)_localctx).Identifier);
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Use_statementContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> parts = new ArrayList<Token>();
		public TerminalNode Use() { return getToken(highcParser.Use, 0); }
		public List<TerminalNode> Identifier() { return getTokens(highcParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(highcParser.Identifier, i);
		}
		public Use_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_statement; }
	}

	public final Use_statementContext use_statement() throws RecognitionException {
		Use_statementContext _localctx = new Use_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_use_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(Use);
			{
			setState(88);
			((Use_statementContext)_localctx).Identifier = match(Identifier);
			((Use_statementContext)_localctx).parts.add(((Use_statementContext)_localctx).Identifier);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(89);
				match(T__0);
				setState(90);
				((Use_statementContext)_localctx).Identifier = match(Identifier);
				((Use_statementContext)_localctx).parts.add(((Use_statementContext)_localctx).Identifier);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Template_headerContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> args = new ArrayList<Token>();
		public TerminalNode Template() { return getToken(highcParser.Template, 0); }
		public List<TerminalNode> Identifier() { return getTokens(highcParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(highcParser.Identifier, i);
		}
		public Template_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template_header; }
	}

	public final Template_headerContext template_header() throws RecognitionException {
		Template_headerContext _localctx = new Template_headerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_template_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(Template);
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				((Template_headerContext)_localctx).Identifier = match(Identifier);
				((Template_headerContext)_localctx).args.add(((Template_headerContext)_localctx).Identifier);
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_define_fieldContext extends ParserRuleContext {
		public Token name;
		public TypenameContext type;
		public TerminalNode Let() { return getToken(highcParser.Let, 0); }
		public TerminalNode Identifier() { return getToken(highcParser.Identifier, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public Struct_define_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_define_field; }
	}

	public final Struct_define_fieldContext struct_define_field() throws RecognitionException {
		Struct_define_fieldContext _localctx = new Struct_define_fieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_struct_define_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(Let);
			setState(103);
			((Struct_define_fieldContext)_localctx).name = match(Identifier);
			setState(104);
			((Struct_define_fieldContext)_localctx).type = typename(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Struct_defineContext extends ParserRuleContext {
		public Token name;
		public Struct_define_fieldContext struct_define_field;
		public List<Struct_define_fieldContext> fields = new ArrayList<Struct_define_fieldContext>();
		public TerminalNode Struct() { return getToken(highcParser.Struct, 0); }
		public TerminalNode OpenBrace() { return getToken(highcParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(highcParser.CloseBrace, 0); }
		public TerminalNode Identifier() { return getToken(highcParser.Identifier, 0); }
		public Template_headerContext template_header() {
			return getRuleContext(Template_headerContext.class,0);
		}
		public List<Struct_define_fieldContext> struct_define_field() {
			return getRuleContexts(Struct_define_fieldContext.class);
		}
		public Struct_define_fieldContext struct_define_field(int i) {
			return getRuleContext(Struct_define_fieldContext.class,i);
		}
		public Struct_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_define; }
	}

	public final Struct_defineContext struct_define() throws RecognitionException {
		Struct_defineContext _localctx = new Struct_defineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_struct_define);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Template) {
				{
				setState(106);
				template_header();
				}
			}

			setState(109);
			match(Struct);
			setState(110);
			((Struct_defineContext)_localctx).name = match(Identifier);
			setState(111);
			match(OpenBrace);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Let) {
				{
				{
				setState(112);
				((Struct_defineContext)_localctx).struct_define_field = struct_define_field();
				((Struct_defineContext)_localctx).fields.add(((Struct_defineContext)_localctx).struct_define_field);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fn_define_argumentContext extends ParserRuleContext {
		public Token auto;
		public TerminalNode Identifier() { return getToken(highcParser.Identifier, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public TerminalNode Auto() { return getToken(highcParser.Auto, 0); }
		public Fn_define_argumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_define_argument; }
	}

	public final Fn_define_argumentContext fn_define_argument() throws RecognitionException {
		Fn_define_argumentContext _localctx = new Fn_define_argumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fn_define_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Auto) {
				{
				setState(120);
				((Fn_define_argumentContext)_localctx).auto = match(Auto);
				}
			}

			setState(123);
			match(Identifier);
			setState(124);
			typename(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fn_defineContext extends ParserRuleContext {
		public Token name;
		public Fn_define_argumentContext fn_define_argument;
		public List<Fn_define_argumentContext> args = new ArrayList<Fn_define_argumentContext>();
		public TypenameContext ret;
		public TerminalNode Fn() { return getToken(highcParser.Fn, 0); }
		public TerminalNode OpenParen() { return getToken(highcParser.OpenParen, 0); }
		public TerminalNode CloseParen() { return getToken(highcParser.CloseParen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(highcParser.Identifier, 0); }
		public Template_headerContext template_header() {
			return getRuleContext(Template_headerContext.class,0);
		}
		public List<Fn_define_argumentContext> fn_define_argument() {
			return getRuleContexts(Fn_define_argumentContext.class);
		}
		public Fn_define_argumentContext fn_define_argument(int i) {
			return getRuleContext(Fn_define_argumentContext.class,i);
		}
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public Fn_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_define; }
	}

	public final Fn_defineContext fn_define() throws RecognitionException {
		Fn_defineContext _localctx = new Fn_defineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fn_define);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Template) {
				{
				setState(126);
				template_header();
				}
			}

			setState(129);
			match(Fn);
			setState(130);
			((Fn_defineContext)_localctx).name = match(Identifier);
			setState(131);
			match(OpenParen);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Auto || _la==Identifier) {
				{
				setState(132);
				((Fn_defineContext)_localctx).fn_define_argument = fn_define_argument();
				((Fn_defineContext)_localctx).args.add(((Fn_defineContext)_localctx).fn_define_argument);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(133);
					match(T__1);
					setState(134);
					((Fn_defineContext)_localctx).fn_define_argument = fn_define_argument();
					((Fn_defineContext)_localctx).args.add(((Fn_defineContext)_localctx).fn_define_argument);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(142);
			match(CloseParen);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 76704130181103616L) != 0)) {
				{
				setState(143);
				((Fn_defineContext)_localctx).ret = typename(0);
				}
			}

			setState(146);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Alias_defineContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Type() { return getToken(highcParser.Type, 0); }
		public TerminalNode Equal() { return getToken(highcParser.Equal, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(highcParser.Identifier, 0); }
		public Alias_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias_define; }
	}

	public final Alias_defineContext alias_define() throws RecognitionException {
		Alias_defineContext _localctx = new Alias_defineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_alias_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(Type);
			setState(149);
			((Alias_defineContext)_localctx).name = match(Identifier);
			setState(150);
			match(Equal);
			setState(151);
			typename(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement;
		public List<StatementContext> stmts = new ArrayList<StatementContext>();
		public TerminalNode OpenBrace() { return getToken(highcParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(highcParser.CloseBrace, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(OpenBrace);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 22657431627505664L) != 0)) {
				{
				{
				setState(154);
				((BlockContext)_localctx).statement = statement();
				((BlockContext)_localctx).stmts.add(((BlockContext)_localctx).statement);
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public Let_statementContext let_statement() {
			return getRuleContext(Let_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Defer_statementContext defer_statement() {
			return getRuleContext(Defer_statementContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public TerminalNode Continue() { return getToken(highcParser.Continue, 0); }
		public TerminalNode Break() { return getToken(highcParser.Break, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				assign_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				let_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				if_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(165);
				while_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(166);
				defer_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(167);
				return_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(168);
				match(Continue);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(169);
				match(Break);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(170);
				block();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(171);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_statementContext extends ParserRuleContext {
		public ExpressionContext value;
		public TerminalNode Return() { return getToken(highcParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Return_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_statement; }
	}

	public final Return_statementContext return_statement() throws RecognitionException {
		Return_statementContext _localctx = new Return_statementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_return_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(Return);
			setState(175);
			((Return_statementContext)_localctx).value = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
